completed photo site

--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -10,7 +10,8 @@
     <header>
         <nav>
             <h1>Meet the Talented Photographers</h1>
-            <a href='/users'><button>Home</button></a>
+            <a href='/'><button>Home</button></a>
+            <a href='/users'><button>Users</button></a>
             <a href='/users/new'><button>Add Your Info!</button></a>
         </nav>
     </header>
